--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
   <app-head></app-head>
+  <app-info></app-info>
+  <app-support></app-support>
+  <app-expertise></app-expertise>
+  <app-tariffs></app-tariffs>
+  <app-cases></app-cases>
+  <app-team></app-team>
+  <app-feedback></app-feedback>
+  <app-clients></app-clients>
+  <app-footer></app-footer>
 </body>
 </html>
