mobile first step

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <app-header></app-header>
-  <app-info></app-info>
+  <!-- <app-info></app-info>
   <app-support></app-support>
   <app-expertise></app-expertise>
   <app-tariffs></app-tariffs>
@@ -19,6 +19,6 @@
   <app-feedback></app-feedback>
   <app-clients></app-clients>
   <app-faq></app-faq>
-  <app-footer></app-footer>
+  <app-footer></app-footer> -->
 </body>
 </html>
