--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <app-header></app-header>
-  <!-- <app-info></app-info>
-  <app-support></app-support>
+  <app-info></app-info>
+  <!-- <app-support></app-support>
   <app-expertise></app-expertise>
   <app-tariffs></app-tariffs>
   <app-professionals></app-professionals>
