--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 <body>
   <app-header></app-header>
   <app-info></app-info>
-  <!-- <app-support></app-support>
-  <app-expertise></app-expertise>
+  <app-support></app-support>
+  <!-- <app-expertise></app-expertise>
   <app-tariffs></app-tariffs>
   <app-professionals></app-professionals>
   <app-cases></app-cases>
